# EosMuon

./: FlashSD.sh  README.md  RecreateImg.sh
Analyses/Matthew/: README.md  eos_muons.mac
Analyses/Matthew/MuonDisplay/: MUONPADDLESPECS.py  Muon Tracking.ipynb  MuonDisplay.py  logger.py
Analyses/Matthew/MuonExperiment/: CMakeLists.txt  Makefile  readme.md  rename.sh
Analyses/Matthew/MuonExperiment/src/: CMakeLists.txt  Muonexperiment.cc  muonexperiment.cpp
Analyses/Matthew/Notebooks/: Computer Simulation Methods Notebook.ipynb  Muon Analysis ROOT.ipynb  Muon Graph Analysis.ipynb  Muon Paddle Simulation.ipynb  PMT Offset Using PyRoot.ipynb  PMT Offset.ipynb  Run and Simulation Analysis Code.ipynb  Test Data stuff.ipynb  setup.sh
Analyses/Matthew/eventdisplay/: EventDisplay_hdf5.py  EventDisplay_hdf5_multiple.py  EventDisplay_root.py  EventDisplay_sim.py  eventsToPlot.txt  pmt_parse.py  pmt_positions.py  pmt_positions_old.py
Analyses/Matthew/scripts/: source.sh  startJupyter.sh
Analyses/MuonPaddleSim/: CMakeLists.txt  Makefile  README.md
Analyses/MuonPaddleSim/config/: Config.hh.in  eos.sh.in
Analyses/MuonPaddleSim/examples/c++/: Makefile  README  timing_ntuple.cc  timing_root.cc  timing_root_digitizer.cc
Analyses/MuonPaddleSim/examples/python/: open_ntuple_root.py  open_ntuple_uproot.py  plot_nhits_ambe.py  plot_timing.py
Analyses/MuonPaddleSim/macros/calibration/: eos_ambe_source.mac  eos_cher_source.mac  eos_cs137_source.mac  eos_electron_gun_dirsource.mac  eos_pube_source.mac  eos_th_source.mac  eos_y90_dirsource.mac
Analyses/MuonPaddleSim/macros/calibration/examples/: Sphere.mac  StickSource.mac  vis_cherenkov_source.mac  vis_gtube.mac  vis_sphere.mac  vis_stick.mac
Analyses/MuonPaddleSim/macros/calibration/lightinjection/: examine_led.py  laserball.mac  laserball_vis.mac  led.mac  led_vis.mac  photon_bomb.mac
Analyses/MuonPaddleSim/macros/data_processing_example/: eos_inhdf5.mac  eos_inhdf5_legacy_wfmana.mac
Analyses/MuonPaddleSim/macros/examples/: eos_dump_geometry.mac  eos_electrons.mac  eos_electrons_legacy_wfmana.mac  eos_muons.mac  eos_photon_bomb.mac  eos_sky.mac  eos_waveforms.mac
Analyses/MuonPaddleSim/macros/machine_learning/: hitmanfit.mac  tensorfit.mac  trainingset.mac
Analyses/MuonPaddleSim/macros/snippets/: waveformAnalysis.snippet
Analyses/MuonPaddleSim/macros/vis/: vis_heprep_eos.mac  vis_heprep_eos_cs137source.mac  vis_heprep_eos_dirsource.mac  vis_heprep_eos_muon.mac  vis_qt_eos.mac  vis_qt_eos_horizontal.mac  vis_sky.mac
Analyses/MuonPaddleSim/models/fitters/HITMAN/water_Y90_example/chargenet/: keras_metadata.pb  saved_model.pb
Analyses/MuonPaddleSim/models/fitters/HITMAN/water_Y90_example/chargenet/variables/: variables.data-00000-of-00001  variables.index
Analyses/MuonPaddleSim/models/fitters/HITMAN/water_Y90_example/hitnet/: keras_metadata.pb  saved_model.pb
Analyses/MuonPaddleSim/models/fitters/HITMAN/water_Y90_example/hitnet/variables/: variables.data-00000-of-00001  variables.index
Analyses/MuonPaddleSim/models/fitters/tensorfit/eos/water/direction/: keras_metadata.pb  saved_model.pb
Analyses/MuonPaddleSim/models/fitters/tensorfit/eos/water/direction/variables/: variables.data-00000-of-00001  variables.index
Analyses/MuonPaddleSim/models/fitters/tensorfit/eos/water/position/: keras_metadata.pb  saved_model.pb
Analyses/MuonPaddleSim/models/fitters/tensorfit/eos/water/position/variables/: variables.data-00000-of-00001  variables.index
Analyses/MuonPaddleSim/ratdb/: DICHROICONS.ratdb  DIGITIZER_ANALYSIS.ratdb  HITMAN.ratdb  IO.ratdb  LASERBALL.ratdb  LED.ratdb  MATERIALS_filters.ratdb  MATERIALS_labppo.ratdb  MATERIALS_wbls.ratdb  OPTICS_filters.ratdb  OPTICS_wbls.ratdb  PMTPULSE.ratdb
Analyses/MuonPaddleSim/ratdb/Eos/: Eos.geo  PMTINFO.ratdb  cable_offset.ratdb  channel_online.ratdb  muonBottom.geo
Analyses/MuonPaddleSim/ratdb/cal/: ambe_source.geo  cher_source.geo  cs137_source.geo  dir_source.geo  pube_source.geo  th_source.geo
Analyses/MuonPaddleSim/src/: CMakeLists.txt  DichroiconArrayFactory.cc  DirSourceFactory.cc  Eos.cc  GeoEosFactory.cc  HitmanProc.cc  InHDF5Producer.cc  LaserballGenerator.cc  NtupleProc.cc  eos.cpp
Analyses/MuonPaddleSim/src/include/: DichroiconArrayFactory.hh  DirSourceFactory.hh  Eos.hh  GeoEosFactory.hh  HitmanProc.hh  InHDF5Producer.hh  LaserballGenerator.hh  NtupleProc.hh
Analyses/MuonPaddleSim/utilities/tensorfit/: README.md  train.py
FPGAHomeDir/: PrintMuonRate  PrintMuonRate.c  PrintMuonRate.c.bak  readreg  readreg.c
ME-XU5-2EG-1I-D11E/: Mercury_XU5_PE1.xpr  Mercury_XU5_PE1.xsa
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.cache/wt/: project.wpc  synthesis.wdf
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.hw/hw_1/: hw.xml
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.ip_user_files/mem_init_files/: Mercury_XU5.bda
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.runs/.jobs/: vrs_config_1.xml  vrs_config_100.xml  vrs_config_111.xml  vrs_config_13.xml  vrs_config_209.xml  vrs_config_24.xml  vrs_config_42.xml  vrs_config_44.xml  vrs_config_45.xml  vrs_config_68.xml  vrs_config_72.xml  vrs_config_73.xml  vrs_config_75.xml  vrs_config_77.xml  vrs_config_8.xml  vrs_config_85.xml  vrs_config_89.xml  vrs_config_94.xml
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.runs/Mercury_XU5_auto_cc_0_synth_1/: .vivado.begin.rst  Mercury_XU5_auto_cc_0.dcp  Mercury_XU5_auto_cc_0.tcl  Mercury_XU5_auto_cc_0.vds  Mercury_XU5_auto_cc_0_utilization_synth.pb  Mercury_XU5_auto_cc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
ME-XU5-2EG-1I-D11E/Mercury_XU5_PE1.runs/Mercury_XU5_auto_ds_0_synth_1/: .vivado.begin.rst  Mercury_XU5_auto_ds_0.dcp  Mercury_XU5_auto_ds_0.tcl  Mercury_XU5_auto_ds_0.vds  Mercury_XU5_auto_ds_0_10528.backup.vds  Mercury_XU5_auto_ds_0_utilization_synth.pb  Mercury_XU5_auto_ds_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  (+1 more)
ME-XU5-2EG-1I-D11E/PHYS4250_WingTo_Lab9/: PHYS4250_WingTo_Lab9.xpr
Muon/: EosMuon.v  Mercury_XU5_PE1.vhd  README.md  readreg.c  regtest.c
MuonReadout/: readreg.c  regtest.c
(+1115 files in other folders)
